--- a/alumni_website/alumni/templates/alumni/profile.html
+++ b/alumni_website/alumni/templates/alumni/profile.html
@@ -22,22 +22,22 @@
                     alt="Profile Picture" 
                     class="img-fluid rounded-circle profilePic">
             </button>
-            <h3 class="mt-3 text-maroon"><span id="profileName">
+            <h3 class="mt-3 text-maroon"><span class="name_text">
                 {{ profile.name|default:"Need to enter Name"}}
                 {% if profile.name is none or profile.name == "" %}
-                        <button class="btn btn-link pencil open_modal" id="first_name" data-title="First Name" data-placeholder="Enter your first name">
+                        <button class="btn btn-link pencil open_modal" id="name" data-title="First Name" data-placeholder="Enter your first name">
                             <i class="bi bi-pencil"></i>
                         </button>
                 {% endif %}
             </span></h3>
             <p class="lead text-dark"> 
-                Class of <span id="profileGradYear">{{ profile.graduation_year|default:"Need to add graduation year" }}
+                Class of <span class="graduation_year_text">{{ profile.graduation_year|default:"Need to add graduation year" }}
                     {% if profile.graduation_year is none or profile.graduation_year == "" %}
                         <button class="btn btn-link pencil open_modal" id="graduation_year" data-title="Graduation Year" data-placeholder="Enter your graduation year">
                             <i class="bi bi-pencil"></i>
                         </button>
                     {% endif %}
-                </span> <strong>•</strong> Student at <span id="profileUniversity">
+                </span> <strong>•</strong> Student at <span class="university_text">
                     {{ profile.university|default:"Need to enter University" }}
                     {% if profile.university is none or profile.university == "" %}
                         <button class="btn btn-link pencil open_modal" id="university" data-title="University" data-placeholder="Enter your university">
@@ -53,10 +53,10 @@
         <div class="row mb-5">
             <div class="col text-center">
                 <h4 class="text-maroon mb-3">About Me</h4>
-                <p class="px-4" id="aboutMe">
+                <p class="px-4 about_me_text">
                     {{ profile.about|default:"Need to write about yourself" }}
                     {% if profile.about is none or profile.about == "" %}
-                        <button class="btn btn-link pencil open_modal" id="about" data-title="About" data-placeholder="Write a bit about yourself">
+                        <button class="btn btn-link pencil open_modal" id="about_me" data-title="About" data-placeholder="Write a bit about yourself">
                             <i class="bi bi-pencil"></i>
                         </button> 
                     {% endif %}
@@ -69,19 +69,22 @@
                 <div class="card shadow border-0">
                     <div class="card-body">
                         <h5 class="card-title text-maroon">Education</h5>
-                        <p class="card-text" id="profileEducation">
+                        <p class="card-text">
+                            <span class="career_text">
                             {{ profile.career|default:"Need to enter Career " }}
                             {% if profile.career is none or profile.career == "" %}
                             <button class="btn btn-link pencil career open_modal" id="career" data-title="Career" data-placeholder="Enter your career">
                                 <i class="bi bi-pencil"></i>
                             </button> 
+                            </span>
                             {% endif %}
-                            at {{ profile.university|default:" and need to add university" }}
+                            at <span class="university_text">{{ profile.university|default:" and need to add university" }}
                             {% if profile.university is none or profile.university == "" %}
                                 <button class="btn btn-link pencil open_modal" id="university" data-title="University" data-placeholder="Enter your university">
                                     <i class="bi bi-pencil"></i>
                                 </button> 
                             {% endif %}
+                            </span>
                         </p>
                     </div>
                 </div>
@@ -91,7 +94,7 @@
                 <div class="card shadow border-0">
                     <div class="card-body">
                         <h5 class="card-title text-maroon">Location</h5>
-                        <p class="card-text" id="profileLocation">
+                        <p class="card-text location_text">
                             {{ profile.location|default:"Need to enter Current location" }}
                             {% if profile.location is none or profile.location == "" %}
                                 <button class="btn btn-link pencil open_modal" id="location" data-title="location" data-placeholder="Enter your location">
@@ -112,26 +115,16 @@
     <span class="close">&times;</span>
     <h2>Edit Profile</h2>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <form enctype="multipart/form-data" action="/edit_pfp" method="post">
-
+        {% csrf_token %}
         <div id="input_content" style="display:none;">
             <label for="name" class="pop_up_label">Edit:</label>
             <input type="text" id="text" name="name" class="pop_up_input text_line" placeholder="Enter" data-field="None">
             <textarea id="textarea" name="name" class="pop_up_input textarea" placeholder="Enter" data-field="None"></textarea>
+
+            <div id="error-message" class="alert alert-danger" role="alert" style="display: none;"></div>
+
+
             <button type="submit" class="pop_up_button" id="submit_button">Save</button><br><br>
         </div>
 
@@ -142,16 +135,6 @@
 
     </form>
 
-
-
-
-
-
-
-
-
-    
-
   </div>
 </div>
 
@@ -161,5 +144,8 @@
 {% endblock %}
 
 {% block javascript %}
+    <script>
+        let csrfToken = "{{ csrf_token }}"
+    </script>
      <script src="{% static 'alumni/javascript/profile.js' %}"></script>
 {% endblock %}
