--- a/alumni_website/alumni/templates/alumni/edit_profile.html
+++ b/alumni_website/alumni/templates/alumni/edit_profile.html
@@ -2,48 +2,40 @@
 {% load static %}
 
 {% block extra_css %}
-     <link href="{%  static 'alumni/css/profile.css'  %}" rel="stylesheet">
+     <link href="{% static 'alumni/css/profile.css' %}" rel="stylesheet">
      <link rel="icon" href="/path/to/your/favicon.ico" type="image/x-icon">
 {% endblock %}
 
 {% block title %}
-    Profile
+    Edit Profile
 {% endblock %}
 
 {% block main %}
 
-    <!-- <div class="container-fluid profile_wrapper"> -->
-
     <div class="container-fluid p-0 profile-img-container bg-maroon-light mb-5 text-center">
         <div style="position: relative; display: inline-block;">
         
-            <button type="button" class = "profile_pic_button open_modal">
+            <button type="button" class="profile_pic_button open_modal">
                 <img src="{% if profile.profile_url %}{{ profile.profile_url }}{% else %}{% static 'alumni/images/profile_image.jpg' %}{% endif %}" 
                     alt="Profile Picture" 
                     class="img-fluid rounded-circle profilePic">
             </button>
             <h3 class="mt-3 text-maroon"><span class="name_text">
                 {{ profile.name|default:"Need to enter Name"}}
-                {% if profile.name is none or profile.name == "" %}
-                        <button class="btn btn-link pencil open_modal" id="name" data-title="First Name" data-placeholder="Enter your first name">
-                            <i class="bi bi-pencil"></i>
-                        </button>
-                {% endif %}
+                <button class="btn btn-link pencil open_modal" id="name" data-title="First Name" data-placeholder="Enter your first name">
+                    <i class="bi bi-pencil"></i>
+                </button>
             </span></h3>
             <p class="lead text-dark"> 
                 Class of <span class="graduation_year_text">{{ profile.graduation_year|default:"Need to add graduation year" }}
-                    {% if profile.graduation_year is none or profile.graduation_year == "" %}
-                        <button class="btn btn-link pencil open_modal" id="graduation_year" data-title="Graduation Year" data-placeholder="Enter your graduation year">
-                            <i class="bi bi-pencil"></i>
-                        </button>
-                    {% endif %}
+                    <button class="btn btn-link pencil open_modal" id="graduation_year" data-title="Graduation Year" data-placeholder="Enter your graduation year">
+                        <i class="bi bi-pencil"></i>
+                    </button>
                 </span> <strong>•</strong> Student at <span class="university_text">
                     {{ profile.university|default:"Need to enter University" }}
-                    {% if profile.university is none or profile.university == "" %}
-                        <button class="btn btn-link pencil open_modal" id="university" data-title="University" data-placeholder="Enter your university">
-                            <i class="bi bi-pencil"></i>
-                        </button>  
-                    {% endif %}
+                    <button class="btn btn-link pencil open_modal" id="university" data-title="University" data-placeholder="Enter your university">
+                        <i class="bi bi-pencil"></i>
+                    </button>  
                 </span>
             </p>
         </div>
@@ -55,11 +47,9 @@
                 <h4 class="text-maroon mb-3">About Me</h4>
                 <p class="px-4 about_me_text">
                     {{ profile.about_me|default:"Need to write about yourself" }}
-                    {% if profile.about_me is none or profile.about_me == "" %}
-                        <button class="btn btn-link pencil open_modal" id="about_me" data-title="About" data-placeholder="Write a bit about yourself">
-                            <i class="bi bi-pencil"></i>
-                        </button> 
-                    {% endif %}
+                    <button class="btn btn-link pencil open_modal" id="about_me" data-title="About" data-placeholder="Write a bit about yourself">
+                        <i class="bi bi-pencil"></i>
+                    </button> 
                 </p>
             </div>
         </div>
@@ -72,18 +62,14 @@
                         <p class="card-text">
                             <span class="career_text">
                             {{ profile.career|default:"Need to enter Career " }}
-                            {% if profile.career is none or profile.career == "" %}
-                            <button class="btn btn-link pencil career open_modal" id="career" data-title="Career" data-placeholder="Enter your career">
+                            <button class="btn btn-link pencil open_modal" id="career" data-title="Career" data-placeholder="Enter your career">
                                 <i class="bi bi-pencil"></i>
                             </button> 
                             </span>
-                            {% endif %}
                             at <span class="university_text">{{ profile.university|default:" and need to add university" }}
-                            {% if profile.university is none or profile.university == "" %}
                                 <button class="btn btn-link pencil open_modal" id="university" data-title="University" data-placeholder="Enter your university">
                                     <i class="bi bi-pencil"></i>
                                 </button> 
-                            {% endif %}
                             </span>
                         </p>
                     </div>
@@ -96,11 +82,9 @@
                         <h5 class="card-title text-maroon">Location</h5>
                         <p class="card-text location_text">
                             {{ profile.location|default:"Need to enter Current location" }}
-                            {% if profile.location is none or profile.location == "" %}
-                                <button class="btn btn-link pencil open_modal" id="location" data-title="location" data-placeholder="Enter your location">
-                                    <i class="bi bi-pencil"></i>
-                                </button> 
-                            {% endif %}
+                            <button class="btn btn-link pencil open_modal" id="location" data-title="location" data-placeholder="Enter your location">
+                                <i class="bi bi-pencil"></i>
+                            </button> 
                         </p>
                     </div>
                 </div>
@@ -108,7 +92,10 @@
         </div>
     </div>
 
-<button type="button" class="edit_button"><a href="{% url 'edit_profile' %}"><i class="bi bi-pencil"></i></a></button>
+<button class="confirm_edit_button">
+    <a href="{% url 'profile' %}" class="confirm_edit_link">Confirm Edit</a>
+</button>
+
 
 <div id="myModal" class="modal">
   <div class="modal-content">
@@ -124,7 +111,6 @@
 
             <div id="error-message" class="alert alert-danger" role="alert" style="display: none;"></div>
 
-
             <button type="submit" class="pop_up_button" id="submit_button">Save</button><br><br>
         </div>
 
@@ -138,14 +124,12 @@
   </div>
 </div>
 
-<!-- </div> -->
-
 
 {% endblock %}
 
 {% block javascript %}
     <script>
-        let csrfToken = "{{ csrf_token }}"
+        let csrfToken = "{{ csrf_token }}";
     </script>
-     <script src="{% static 'alumni/javascript/profile.js' %}"></script>
+    <script src="{% static 'alumni/javascript/edit_profile.js' %}"></script>
 {% endblock %}
