--- a/alumni_website/alumni/templates/alumni/layout.html
+++ b/alumni_website/alumni/templates/alumni/layout.html
@@ -28,7 +28,7 @@
               <a class="nav-link" href="/profile">Profile</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/directory">Home</a>
+              <a class="nav-link" href="{% url 'directory' %}">Directory</a>
             </li>  
             <li class="nav-item">
               <a class="nav-link" href="{% url 'logout_view' %}">Log Out</a>
