--- a/alumni_website/alumni/static/alumni/css/profile.css
+++ b/alumni_website/alumni/static/alumni/css/profile.css
@@ -35,6 +35,48 @@
   display: none;
 }
 
+
+
+
+
+
+
+
+
+
+
+.requested{
+    display: block;
+    width: 150px;
+    padding: 10px;
+    background-color: rgba(128, 0, 0, 0.523);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    text-align: center;
+    margin: 20px auto 0;
+    margin-bottom: 2%;;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
  .confirm_edit_button {
     display: block;
     width: 150px;
