--- a/alumni_website/alumni/templates/alumni/layout.html
+++ b/alumni_website/alumni/templates/alumni/layout.html
@@ -28,8 +28,17 @@
               <a class="nav-link" href="/profile">Profile</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'directory' %}">Directory</a>
+              <a class="nav-link" href="{% url 'mentor_directory' %}">Mentors</a>
             </li>  
+            {% if user.mentor %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'mentor_dashboard' %}">Mentor Dashboard</a>
+            </li>  
+            {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'mentor_signup' %}">Become a Mentor</a>
+            </li>  
+            {% endif %}
             <li class="nav-item">
               <a class="nav-link" href="{% url 'logout_view' %}">Log Out</a>
           </li> 
