--- a/alumni_website/alumni/static/alumni/css/pending.css
+++ b/alumni_website/alumni/static/alumni/css/pending.css
@@ -12,7 +12,7 @@ body {
 
 .pending-requests-container h2 {
   text-align: center;
-  color: #800000; /* Qatar Airways Maroon */
+  color: #800000; 
   margin-bottom: 30px;
 }
 
