--- a/alumni_website/alumni/templates/alumni/sign_up.html
+++ b/alumni_website/alumni/templates/alumni/sign_up.html
@@ -15,14 +15,14 @@
     <div class="main-content">
     <div class="container container-form">
         <div id="logoContainer">
-        <img src="{% static 'alumni/images/logo.jpg' %}" alt="Oryx Logo" id="logo">
+        <img src="{% static 'alumni/images/school_logo.avif' %}" alt="Logo" id="logo">
         </div>
-        <div class="elite-badge">- Oryx International School Alumni -</div>
+        <div class="elite-badge">- School Alumni -</div>
         <div class="form-box">
         <h1 id="title">Sign Up</h1>
         <form id="authForm" method="post" action="/sign_up">
             {% csrf_token %}
-            <div class="input-group">
+            <div class="input-group">   
             <div class="input-field">
                 <input type="email" placeholder="Email" id="emailInput" required name="email"/>
             </div>
@@ -40,11 +40,10 @@
         </div>
     </div>
 
-    <!-- Move footer here -->
     <div class="footerContainer">
         <footer class="footer">
-        © 2025 Oryx Alumni Network <br>
-        Email us at <a class="oryxemail" href="mailto:oryxalumni@gmail.com" style="color: rgba(255, 255, 255, 0.6);">oryxalumni@gmail.com</a>
+        © 2025 Alumni Network <br>
+        Email us at <a class="email" href="mailto:#" style="color: rgba(255, 255, 255, 0.6);">school@email.com</a>
         </footer>
     </div>
     </div>
