--- a/alumni_website/alumni/templates/alumni/layout.html
+++ b/alumni_website/alumni/templates/alumni/layout.html
@@ -14,7 +14,7 @@
 <body>
   <nav class="navbar navbar-expand-md bg-dark navbar-dark bg-maroon">
     <div class="container-fluid">
-      <a class="navbar-brand" href="https://oryxschool.qa/" target="_blank"><img src="{% static 'alumni/images/logo.jpg' %}" alt="Oryx Logo" class="logo"></a>
+      <a class="navbar-brand" href="#" target="_blank"><img src="{% static 'alumni/images/school_logo.avif' %}" alt="Logo" class="logo"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
