--- a/alumni_website/alumni/templates/alumni/mentor_directory.html
+++ b/alumni_website/alumni/templates/alumni/mentor_directory.html
@@ -17,12 +17,30 @@
 <div class="container alumni-section">
   <h2 class="mb-4 text-center alumni-heading">Our Mentors</h2>
 
+  <div class="search-container text-center mb-5">
+    <div class="search-flex-container">
+      <input type="text" id="searchInput" class="search-input" placeholder="Search by skills">
 
-    <div class="search-container text-center mb-5">
-        <input type="text" id="searchInput" class="search-input" placeholder="Search by skills">
+        <select class="form-control select-filter batch-year" id="batch_year">
+        <option default>Batch Year</option>
+        {% for year in years %}
+            <option>{{ year.graduation_year }}</option>
+        {% endfor %}
+        </select>
+
+        <select class="form-control select-filter uni" id="university">
+            <option default>University</option>
+            {% for uni in university %}
+                <option>{{ uni.university }}</option>
+            {% endfor %}
+        </select>
+
+
     </div>
+  </div>
 
-    <div id="alumni-container" class="row g-4"></div>
+
+  <div id="alumni-container" class="row g-4"></div>
 </div>
 
 
