Added a basic chat prototype to the alumni website

--- a/alumni_website/templates/profiles/view_profile.html
+++ b/alumni_website/templates/profiles/view_profile.html
@@ -22,7 +22,7 @@
                 </a>
             </span>
         
-            <img src="{% if profile.profile_url %}{{ profile.profile_url }}{% else %}{% static 'alumni/images/profile_image.jpg' %}{% endif %}" 
+            <img src="{% if profile.profile_url %}{{ profile.profile_url }}{% else %}{% static 'images/profile_image.jpg' %}{% endif %}" 
                 alt="Profile Picture" 
                 class="img-fluid rounded-circle profilePic">
             <h3 class="mt-3 text-maroon">
