--- a/alumni_website/templates/layout.html
+++ b/alumni_website/templates/layout.html
@@ -55,14 +55,14 @@
     </div>
   </nav>
 
-{% if messages %}
+<!-- {% if messages %}
   {% for message in messages %}
     <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
       {{ message }}
       <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
   {% endfor %}
-{% endif %}
+{% endif %} -->
 
   
   <div>
