--- a/alumni_website/templates/messaging/partials/message.html
+++ b/alumni_website/templates/messaging/partials/message.html
@@ -1,1 +1,1 @@
-{% include 'messaging/partials/chat_message.html' with message=message_chat user=user %}
+{% include 'messaging/partials/chat_message.html' with message=messages user=user %}
