Added initial implementation of online user count

--- a/alumni_website/templates/messaging/message.html
+++ b/alumni_website/templates/messaging/message.html
@@ -12,6 +12,7 @@
 
 <div class="chat-container">
   <div class="chat-header">Mentor: John Smith</div>
+  <div>{% include 'messaging/partials/online_count.html' with online_count=online_count %}</div>
   
   <div class="chat-messages" id="chat-box">
 
